SAK-31843 : Assignments / peer reviewer comments text field

--- a/assignment/assignment-bundles/resources/assignment_es.properties
+++ b/assignment/assignment-bundles/resources/assignment_es.properties
@@ -967,6 +967,7 @@ peerassessment.reviewerNoAttachments=El revisor no ha enviado adjuntos
 peerassessment.alert.saveerrorunkown=Ha ocurrido un error mientras se salvaba, por favor, refresque e int\u00e9ntelo de nuevo.
 peerassessment.alert.saveinvalidscore=Debe ingresar un n\u00famero v\u00e1lido mayor que cero para la puntuaci\u00f3n.
 peerassessment.alert.savenoscorecomment=Debe introducir una nota o comentario para pode entregar su evaluaci\u00f3n por pares.
+peerassessment.alert.commenttoolong=Su comentario excede el m\u00e1ximo de car\u00e1cteres permitidos.
 peerassessment.instructions.reviewer=Instrucciones para el revisor
 peerassessment.invliadGroupAssignment=Evaluaci\u00f3n por pares no est\u00e1 disponibles para las tareas de grupo.
 peerassessment.invliadSubmissionTypeAssignment=La evaluaci\u00f3n por pares no est\u00e1 disponible para las tareas que no sean digitales.
