SAK-32654 re-do PageOrderHelper sorting to use jquery-ui keyboardSortable

--- a/site-manage/pageorder/tool/src/bundle/org/sakaiproject/tool/pageorder/bundle/Messages.properties
+++ b/site-manage/pageorder/tool/src/bundle/org/sakaiproject/tool/pageorder/bundle/Messages.properties
@@ -32,7 +32,7 @@ save_page_edit=Save changes made to tool: {0}
 page_hidden_flag=Tool is hidden from normal users 
 page_locked_flag=Tool is disabled for normal users 
 
-page_click_n_drag=Click and drag the tools into the order that you want
+page_click_n_drag=Click and drag tools into the desired order. Use U and D keys to move items up and down.
 
 show_add=Add tool(s) to your site
 
