--- a/syllabus/syllabus-app/src/bundle/org/sakaiproject/tool/syllabus/bundle/Messages.properties
+++ b/syllabus/syllabus-app/src/bundle/org/sakaiproject/tool/syllabus/bundle/Messages.properties
@@ -59,6 +59,8 @@ update=Update
 add_sylla=Add syllabus...
 add_sylla_bulk=Bulk Create Syllabus Items
 redirect_sylla=Redirect Syllabus
+redirect_sylla_delete=To delete the redirect, clear the URL field and Save.
+redirect_explanation=The syllabus is available at the following URL (opens new window):
 newSyllabusForm1=Complete this form, then choose the appropriate button at the bottom. A 
 newSyllabusForm2=means required information.
 syllabus_noEntry= No Syllabus currently exists.
@@ -263,7 +265,5 @@ clickToRemoveAttachment=Click to delete attachment
 deleteAttachmentTitle=Delete Attachment
 clickToExpandAndCollapse=Click to expand/collapse, change attachments or edit body content.
 
-iframeSecurity=For increased security, URL's that begin with 'http' rather than 'https' will open in a new window or tab.  If the page did not automatically open, click <a href='{0}' target="_blank">here</a>
-syllabus_PopupBlocked=If pop-up is blocked, <a target="syllabus" href="{0}">click here</a> or allow pop-ups.
 
 draftTitlePrefix=DRAFT -
