SAK-33348: improve delete item warning to indicate items cannot be restored

--- a/syllabus/syllabus-app/src/bundle/org/sakaiproject/tool/syllabus/bundle/Messages.properties
+++ b/syllabus/syllabus-app/src/bundle/org/sakaiproject/tool/syllabus/bundle/Messages.properties
@@ -265,5 +265,5 @@ clickToRemoveAttachment=Click to delete attachment
 deleteAttachmentTitle=Delete Attachment
 clickToExpandAndCollapse=Click to expand/collapse, change attachments or edit body content.
 
-
 draftTitlePrefix=DRAFT -
+noUndoWarning=WARNING: this action cannot be undone.
