SAK-33348: update 'Bulk Edit' confirmation UI header text

--- a/syllabus/syllabus-app/src/bundle/org/sakaiproject/tool/syllabus/bundle/Messages.properties
+++ b/syllabus/syllabus-app/src/bundle/org/sakaiproject/tool/syllabus/bundle/Messages.properties
@@ -102,7 +102,7 @@ low=low
 
 previewNotice=Preview Syllabus Item
 editNotice=Edit Syllabus Item
-delConfNotice=Deleting selected items
+delConfNotice=Updating/Deleting selected items
 
 delConfAlert=Are you sure you want to make the following changes to the specified item(s)?
 delConfHeaderRemove=Remove
